[metadata]
name = toga-tracked
description = Open source, easy to use, data fitting platform.
url = https://github.com/saroad2/toga-tracked
author = Sagi Shadur
author_email = saroad2@gmail.com
maintainer = Sagi Shadur
maintainer_email = saroad2@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Utilities
license = Apache License
license_file = LICENSE
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
platforms = any

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
include_package_data = True
package_dir =
    = src
install_requires =
    toga >= 0.3.0.dev23

[options.packages.find]
where = src
